dts/testData/inspections/labelName/InvalidStart.dtsi
<error descr="Bad first character \"0\" in label name">0label</error>: prop = "value";

label0: prop = "value";